# drf_khynotska

./: .env  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: urls.py
apps/auto_parks/: models.py  serializer.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparksmodel_user.py
apps/cars/: choices.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_created_at_carmodel_updated_at.py  0002_carmodel_image.py  0003_alter_carmodel_brand_alter_carmodel_image.py  0003_carmodel_price.py  0004_carmodel_auto_park.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0003_alter_usermodel_options_alter_usermodel_managers_and_more.py  0005_alter_profilemodel_avatar.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/auto_parks/: serializer.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: permissions.py
backend/templates/: recover.html  spam.html  test_email.html
cars/: models.py  serializers.py  views.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_configs/: __init__.py  rest_config.py
core/dataclasses/: user_dataclass.py
core/enums/: action_token_enum.py  regex_enum.py
core/services/: upload_avatar.py  upload_car_img.py
frontend/: package-lock.json
frontend/src/: App.js  index.js
templates/: base.html  register.html
(+24 files in other folders)
